# libttdat

./: .gitignore  CMakeLists.txt  Makefile  README.MD  README.md  build-linux.sh  build-windows.ps1  ttdat.cpp  ttdat.hpp  types.hpp
include/libttdat/: defs.hpp  ttdat.hpp  types.hpp  win32.hpp
src/: CMakeLists.txt  crc.cpp  crc.hpp  ttdat.cpp  util.cpp  util.hpp
src/win32/: CMakeLists.txt
test/: CMakeLists.txt  ttdat_test.cpp
util/: file.cpp  file.hpp  types.hpp  util.cpp  util.hpp
